--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,7 @@
   padding: 30px 80px 40px;
   position: relative;
   box-sizing: border-box;
+  z-index: 1;
 }
 
 .nav {
@@ -66,6 +67,7 @@
   top: 135px;
   right: 20px;
   max-width: 636px;
+  z-index: -1;
 }
 
 .header__footer {
