--- a/styles/style.css
+++ b/styles/style.css
@@ -38,7 +38,7 @@
 }
 
 .nav__link {
-  color: #000000;
+  color: #000;
   text-decoration: none;
   font-weight: bold;
 }
@@ -204,11 +204,19 @@
 .person_name_cannon {
   bottom: 18px;
   right: 216px;
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  text-align: center;
 }
 
 .person_name_mitchell {
   bottom: 82px;
   left: 142px;
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  text-align: center;
 }
 
 .person_name_tarter {
@@ -401,7 +409,7 @@
 
 .footer {
   box-sizing: border-box;
-  background-color: #000000;
+  background-color: #1f1f1f;
   color: white;
   font-size: 16px;
   line-height: 20px;
@@ -436,9 +444,7 @@
   margin: 0 0 16px;
 }
 
-.footer__list-item:last-child::after {
-  content: "";
-  display: block;
+.footer__list-item:last-of-type {
   margin-bottom: 0;
 }
 
@@ -460,6 +466,7 @@
 .footer__social-icon {
   height: 16px;
   width: 16px;
+  margin-right: 10px;
 }
 
 .footer__copyright {
